--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -87,7 +87,7 @@
                 <div class="header-menu">
                     <div class="user-area dropdown float-right">
                         <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="user-avatar rounded-circle" src="/static/images/pt1.jpg" alt="User Avatar">
+                            <img class="user-avatar rounded-circle" src="/static/images/user.png" alt="User Avatar">
                         </a>
 
                         <div class="user-menu dropdown-menu">
