--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
                     </li>
                     <li class="menu-title">Informations</li><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-university"></i>Student</a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-university"></i>Student Details</a>
                         <ul class="sub-menu children dropdown-menu">                            
 							<li><i class="fa fa-id-card-o"></i><a href="">Grade 10</a></li>
                             <li><i class="fa fa-id-card-o"></i><a href="">Grade 9</a></li>
