--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,9 +12,9 @@
                 <div class="page-header float-right">
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
-                            <li><a href="#">Dashboard</a></li>
-                            <li><a href="#">Pan Taing</a></li>
-                            <li class="active">Datas</li>
+                            <li class="active">Dashboard</li>
+                            <li><a href="/user/post">Posts</a></li>
+                            <li><a href="#">Datas</a></li>
                         </ol>
                     </div>
                 </div>
