--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -73,7 +73,7 @@
                 <p class="card-text">{{body}}</p>
                 
             </div>
-            <div class="card-footer">
+            <div class="card-footer mb-0">
                 <p class="float-right">
                     <a class="btn btn-danger btn-sm"><i class="fa fa-trash" style="color:white"></i></a>
                     <a class="btn btn-warning btn-sm"><i class="fa fa-edit" style="color:white"></i></a>
