--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,7 +15,7 @@
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
                             <li class="active">Dashboard</li>
-                            <li><a href="/user/post">Posts</a></li>
+                            <li><a href="/user/5f87e4443d9406180ccc1703/post">Posts</a></li>
                             <li><a href="#">Datas</a></li>
                         </ol>
                     </div>
