--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -76,7 +76,7 @@
             </div>
             <div class="card-footer mb-0">
                 <p class="float-right">
-                    <a class="btn btn-danger btn-sm"><i class="fa fa-trash" style="color:white"></i></a>
+                    <a class="btn btn-danger btn-sm" href="/user/5f87e4443d9406180ccc1703/post/delete/{{_id}}"><i class="fa fa-trash" style="color:white"></i></a>
                     <a class="btn btn-warning btn-sm"><i class="fa fa-edit" style="color:white"></i></a>
                 </p>
             </div>
