--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -30,7 +30,7 @@
                 <strong class="card-title">Activities & Posts</strong>
             </div>
             <div class="card-body">
-                <form action="/user/post/upload" method="post" enctype="multipart/form-data">
+                <form action="/user/5f87e4443d9406180ccc1703/post" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <label>Title</label>
                         <input type="text" class="form-control" placeholder="" name="title">
