--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -37,13 +37,13 @@
                     </div>
                     <div class="form-group">
                         <label>Content Body</label>
-                        <textarea name="body" id="textarea-input" rows="5" placeholder="Content..."
+                        <textarea name="body" id="textarea-input" rows="3" placeholder="Content..."
                             class="form-control"></textarea>
                     </div>
                     <div class="form-group">
                         <input type="file" name="profile" class="form-control">
                     </div>
-                    <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Post</button>
+                    <button type="submit" class="btn btn-success btn-sm m-b-30 m-t-30">Upload</button>
                 </form>
             </div>
         </div>
