--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,8 +15,8 @@
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
                             <li class="active">Dashboard</li>
-                            <li><a href="/user/5f87e4443d9406180ccc1703/post">Posts</a></li>
-                            <li><a href="#">Datas</a></li>
+                            <li><a href="/user/5f87e4443d9406180ccc1703/post">Post</a></li>
+                            <li><a href="user/5f87e4443d9406180ccc1703/student">Student</a></li>
                         </ol>
                     </div>
                 </div>
