--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -12,9 +12,9 @@
                 <div class="page-header float-right">
                     <div class="page-title">
                         <ol class="breadcrumb text-right">
-                            <li><a href="#">Dashboard</a></li>
-                            <li class="active">Posts</li>
-                            <li><a href="#">Datas</a></li>
+                            <li><a href="/5f87e4443d9406180ccc1703">Dashboard</a></li>
+                            <li class="active">Post</li>
+                            <li><a href="user/5f87e4443d9406180ccc1703/student">Student</a></li>
                         </ol>
                     </div>
                 </div>
@@ -72,13 +72,14 @@
             </div>
             <div class="card-body">
                 <p class="card-text">{{body}}</p>
-                
+                <small>{{date}}</small>
             </div>
             <div class="card-footer mb-0">
                 <p class="float-right">
                     <a class="btn btn-danger btn-sm" href="/user/5f87e4443d9406180ccc1703/post/delete/{{_id}}"><i class="fa fa-trash" style="color:white"></i></a>
                     <a class="btn btn-warning btn-sm"><i class="fa fa-edit" style="color:white"></i></a>
                 </p>
+                
             </div>
         </div>
     </div>
