--- a/views/newStudent.handlebars
+++ b/views/newStudent.handlebars
@@ -52,7 +52,7 @@
                         </select>
                     </div>
                  
-                    <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
+                    <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Save</button>
                 </form>
             </div>
         </div>
