--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,13 @@
 
 <div class="row">
-     {{#each results}}
+     {{!-- {{#each results}} --}}
      <div class="col-md-4">
         <div class="card">
-            <img class="card-img-top" src="/static/uploads/{{image}}" alt="Card image cap">
+            {{!-- <img class="card-img-top" src="/static/uploads/{{image}}" alt="Card image cap"> --}}
             <div class="card-body">
-                <h6 class="card-title mb-3">{{title}}</h6>
-                <p class="card-text">{{body}}</p>
+                <h6 class="card-title mb-3">Hello</h6>
+                {{!-- {{title}} --}}
+                {{!-- <p class="card-text">{{body}}</p> --}}
             </div>
         </div>
     </div>
